[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/weapon_projectiles/shotgun_projectile/shotgun_projectile.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/spark_particles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/particles/blood_particles.tscn" type="PackedScene" id=3]

[sub_resource type="SphereShape" id=1]
radius = 0.05

[node name="shotgun_projectile" type="KinematicBody"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="blood_particles" parent="." instance=ExtResource( 3 )]

[node name="spark_particles" parent="." instance=ExtResource( 2 )]

[node name="death_timer" type="Timer" parent="."]

[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
